--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -24,7 +24,7 @@ links:
 - Семен, ГМ, цифровой художник
 - Алексей "HellFell", ГМ и прекрасный человек
 - Кирилл "Byrricade" Лысенков
-- m0ngo
+- m0ngo aka Greg
 - Дамир "Е..ный Далай Лама" Рахимов
 
 
@@ -50,7 +50,7 @@ links:
 
 В число этих материалов входило и Собрание предысторий для Лиги Авантюристов, которое потом администраторы убрали с публикации (а жаль - оно стало к тому моменту электрумным бестселлером) и также другие материалы - направленные в первую очередь на мастеров, многие из которых стали бестселлерами на dmsguild.com
 
-В какой то момент времени была предпринята попытка публикации русскоязычного приключения - Однажды на постоялом дворе. К сожалению, несмотря на множество положительных отзывов, коммерческого успеха эта авантюра не имела.
+В какой то момент времени была предпринята попытка публикации русскоязычного приключения - **Однажды на постоялом дворе**. К сожалению, несмотря на множество положительных отзывов, коммерческого успеха эта авантюра не имела.
 
 ## Участие в переводах материалов D&D
 
