--- a/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
+++ b/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
@@ -9,6 +9,8 @@ tags:
   - Черновик
 ---
 
+Версия: 0.35
+
 ## ТЕРМИНОЛОГИЯ
 
 Номинальная стоимость товара – объективная оценочная стоимость товара без учета региональных особенностей (эквивалентна ценам из Руководства Игрока).
@@ -83,3 +85,124 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 Максимальный размер партии товара, которая может быть продана в поселении определяется в конечной цене (т.е. реальное продаваемое количество товара будет меньше если продавец продает с выгодой для себя и больше если продает с убытком).
 
 Базовая длительность операции - 5 дней. Если результат не устраивает персонажа, то он может потратить еще 5 дней, чтобы найти других клиентов (покупателей или продавцов) и повторить проверку Знаний (торговля).
+
+---
+
+## ТОВАРЫ ДЛЯ ТОРГОВЛИ
+
+В мирный день, авантюристы встречают на дороге торговый караван. Они просто видят другую часть жизни сеттинга, детали, которые добавляют реализм миру кампании, ту, которая не воздействует на героев или их миссию. В другой раз, авантюристы встречают караван на той же самой дороге, который на сей раз бежит от пары мифических чудовищ. После возможного сражения ГМ должен знать то, что находится в фургонах, сколько это стоит и какая стража защищает товары.
+
+Ценность торгового каравана или инвентаря магазина становится еще более важной для ПИ, если им захочется что-нибудь купить. Ценные товары должны охранять мощные охранники, и если партия вступает в конфликт с ними то, ценность приобретенных товаров должна соответствовать трудности столкновения.
+
+Этот простой принцип может быть основным в большинстве кампаний. Торговцы существуют, но их действия остаются неопределенными; предполагается, что общее население мира кампании занимается бизнесом и держит цены на уровне, описанном в КИ и РМ. Некоторые кампании однако, дают более детальный подхода к экономическим системам.
+
+## Экономические Системы
+
+Проектирование последовательной кампании требует, по крайней мере, исследования экономики, даже если это исследование включает только следование структуре цен в основных книгах. 
+
+Изложение в деталях экономической системы кампании - это не огромный комплекс или даже не отнимающая много времени задача. Есть три возможных подхода к проектированию экономической системы: оставьте её полностью неопределенной; определите только те части экономики, с которыми персонажи взаимодействуют; или определите все подробно заранее. Неопределённость экономических условий в пределах мира кампании позволяет ГМ-у быстро изменить условия, но здесь мы жертвуем правдоподобием ценовой структуры. Безусловно, ПИ, вероятно, столкнутся только с общим подходом определения экономической ситуации. Это требует некоторой работы от ГМ-а, но не такой тяжёлой. Детализация всей системы экономических условий в пределах мира кампании обеспечивает самую большую последовательность, но это также требует больше усилий.
+
+Детализация сложной экономики - выходит за рамки возможностей большинства кампаний, но смоделировать её можно. Применяя и делая записи по набору небольших экономических условий, ГМ могут легко отслеживать большие экономические силы. Торговые образцы из областей излишков к областям с высоким дефицитом вообще делаются очень легко. Простой набор ценовых модификаторов для каждой области также будет оченб полезен.
+
+| Товарное требование | Доступность   | Регулирование стоимости |
+|---------------------|---------------|-------------------------|
+| Переизбыток         | Всегда        | -20%                    |
+| Излишек             | Всегда        | -10%                    |
+| Обычно              | Обычная       | 0%-10%                  |
+| Зависит от поставки | Обычно всегда | 10%                     |
+| Разыскиваемый       | Обычно всегда | 20%                     |
+| Популярный          | Иногда        | -0,1                    |
+| Требуется           | Иногда        | 50%                     |
+| Дефицит             | Чёрный рынок  | 100%                    |
+
+**Переизбыток:** область производит этот товар круглый год или очень часто, и вероятно экспортирует его в другие области.
+
+**Излишек:** область производит этот товар сезонно или около главного источника производства. Торговцы часто покупают товар здесь и транспортируют его к областям более высокого требования.
+
+**Обычно:** Цены как в РИ. Товар вероятно производится и потребляется в данной области.
+
+**Зависит от поставки: **область производит товар, но мало. Торговцы транспортируют товар из соседних областей, чтобы продавать здесь.
+
+**Разыскиваемый:** товар или не производится в местном масштабе, или в нём очень большая потребность. Торговцы мчатся, чтобы привезти товар в такую области.
+
+**Популярный:** на товар в настоящее время очень большой спрос. Торговцы с большими поставками товара становятся очень богатыми.
+
+**Требуется:** товар находится в большом дефиците, и даже богатые не могут иметь его в достатке. Большие города испытывают это условие чаще всего к еде из-за экологических опасностей. Торговцы путешествуют на большие расстояния, чтобы привезти товар в нужную область.
+
+**Дефицит:** Пища во время голода, медицинские препараты во времена эпидемий, оружие во время войны. Есть большая потребность и нет никаких поставок – те, кто имеет доступ к даже маленькому количеству товара может назначать свою цену, если только смогут защитить товар от тех, кому он нужен. Это условие возникает чаще всего, когда правительство полностью захватывает один тип товара. Для того, чтобы возникла такая ситуация, торговцы должны быть неспособны доставить товар в область. Поступление товара в область осуществляется посредством контрабандистов или людей с мощной магической поддержкой.
+
+Так как большинство предметов потребления подпадает под нормальную категорию, МИ должны просто отметить области большого избытка и большого недостатка. Торговля копирует и экономические условия, которые появляются от этих простых ярлыков, делают большой фон к кампании, особенно когда действия авантюристов начинают затрагивать условия больших областей.
+
+## Уровни Богатства Торговцев
+
+Кроме полных экономических условий кампании, ресурсы индивидуальных торговцев иногда становятся важными для приключения. В то время как большинство взаимодействий ПИ с торговцами не должно занять много времени или внимание, есть случаи, когда больше деталей о ресурсах торговца очень важно.
+
+В дополнение к их индивидуальным ресурсам, торговцы должны работать с товарами, которые они имеют под рукой.
+
+В D&D играх, это означает, что их закупки товара и его продажа ограничены размером сообществ, в которых они происходят. Проще говоря, богатство каравана торговцев или инвентаря постоянного торговца не может превысить более чем в два раза лимит по золоту для данного сообщества. Лимит по золоту как определено РМ 3.5 редакции представляет максимальную ценность любого предмета для продажи в данном сообществе. Так как лимит измеряет относительное богатство сообщества, но не его полный ресурс, удвоение лимита делает легким и простым определение ресурсов индивидуального торговца. Некоторые торговцы имеют очень ценные предметы для продажи, но такие товары представляют существенную часть ресурсов этого торговца. Аналогично, ценность товаров, которые торговец может продать в любом сообществе, не может быть больше чем лимит золота для этого сообщества. 
+
+Проектируя содержание каравана или магазина торговца, ГМ должен также учитывать лимиты богатств для НИП согласно их уровню. Таблица 5 Сообщества, выше, сравнивает население сообщества с ценностью товаров торговцев, Уровень Столкновения за сокровище имеющееся у торговца товарами и стандартным множеством охранников, которые защищают товары. Путешествующие торговцы должны главным образом заключать договоры на защиту, но постоянные фирмы и торговцы, едущие в хорошо-защищенных областях будут иметь небольшую собственную защиту. В этих ситуациях, ГМ должны гарантировать, что сила местных защитников равна УСт из стандартных столкновений для подземелий.
+
+5 СООБЩЕСТВА
+| Размер общества | Население     | Лимит золота | Богатство торговца | Богатство каравана | УСт | Охрана каравана                                    |
+|-----------------|---------------|--------------|--------------------|--------------------|-----|----------------------------------------------------|
+| Хутор           | 20-80         | 40           | 100                | 100                | 1   | War1 (x2)                                          |
+| Посёлок         | 81-400        | 100          | 200                | 200                | 1   | War1 (x2)                                          |
+| Деревня         | 401-900       | 200          | 400                | 400                | 1   | War1 (x2)                                          |
+| Мал. Село       | 901-2,000     | 800          | 1,6                | 1                  | 4   | Ftr3, War1 (x3)                                    |
+| Бол. Село       | 2.001-5,000   | 3            | 6                  | 3                  | 8   | Ftr4, War2, War1 (x9)                              |
+| Мал. Город      | 5,001-12,000  | 15           | 30                 | 1 0,000            | 12  | Ftr6 (x2), War4 (x7), War2 (x12)                   |
+| Бол. Город      | 12,001-25,000 | 40           | 80                 | 20                 | 15  | Ftr8, Ftr6 (x2), Adp6 (x2), War4 (x10), War2 (x12) |
+| Метрополис      | 25,000+       | 100          | 200                | 50                 | 18  | Ftr8, Ftr6 (x4), Adp6 (x4), War4 (x14), War2 (x24) |
+	
+**Богатство Торговца:** максимальный собственный капитал торговца. В сообществе это - содержание одного магазина. Для путешествующих торговцев - это полная ценность транспортируемых товаров и содержащихся в родном сообществе. Путешествующие торговцы использует ценность сообществ откуда они происходят.
+
+**Богатство каравана:** максимальная ценность товаров, транспортируемых одним торговцем из определенного сообщества. Немного торговцев транспортируют максимальную ценность товаров.
+
+**УСт:** Уровень Столкновения, соразмерный с ценностью транспортируемых товаров.
+Охрана каравана: типичный контингент охранников в нецивилизованной области. Он часто уменьшается в безопасных областях.
+
+6 ТОВАРЫ
+
+| ТОВАРЫ                                 | Размер упаковки | Цена за упаковку |
+|----------------------------------------|-----------------|------------------|
+| Алхимические материалы, необычные      | 1 oz.           | 1 см-1 зм        |
+| Алхимические материалы, редкие         | 1 oz.           | 2зм-10зм         |
+| Алхимические материалы, экзотические   | 1 oz.           | 11 зм-25+ зм     |
+| Материалы для заклинаний, редкие       | 3 фн.           | 1 зм-5 зм        |
+| Материалы для заклинаний, экзотические | 1 oz.           | 6 зм-25 зм       |
+| Материалы для заклинаний, уникальные   | 1 oz.           | 25зм-100+зм      |
+| Косметика, общая                       | 1 oz.           | 1 мм-1 см        |
+| Косметика, необычная                   | 1 oz.           | 2 см-1 зм        |
+| Косметика, редкая                      | 1 oz.           | 2зм-10зм         |
+| Косметика, экзотическая                | 1 oz.           | 11 зм-25+ зм     |
+| Сушёные продукты, общие                | 1 фн.           | 1 см-5 см        |
+| Сушёные продукты, необычные            | 1 фн.           | 6 см-15 см       |
+| Сушёные продукты, редкие               | 1 фн.           | 15 см-25+ см     |
+| Ткань, общая                           | 50 фн.          | 1 см-1 зм        |
+| Ткань, прекрасная                      | 50 фн.          | 2 зм-10 зм       |
+| Ткань, необычная                       | 50 фн.          | 11 зм-25 зм      |
+| Ткань, экзотическая                    | 50 фн.          | 26 зм-50+ зм     |
+| Мебель, местная                        | 20 фн.          | 1 зм-5 зм        |
+| Мебель, прекрасная                     | 20 фн.          | 6 зм-15 зм       |
+| Мебель, экзотическая                   | 20 фн.          | 15 зм-25+ зм     |
+| Шкуры и меха, общие                    | 20 фн.          | 1 см-5 зм        |
+| Шкуры и меха, необычные                | 20 фн.          | 6 зм-10 зм       |
+| Шкуры и меха, редкие                   | 20 фн.          | 11 зм-20 зм      |
+| Шкуры и меха, экзотические             | 20 фн.          | 21 зм-50 зм      |
+| Шкуры и меха, монстров                 | 20 фн.          | 51 зм-200+ зм    |
+| Древесина, местная                     | 50 фн.          | 1 зм-10 зм       |
+| Древесина, необычная                   | 50 фн.          | 11 зм-25 зм      |
+| Древесина, экзотическая                | 50 фн.          | 26 зм-50+ зм     |
+| Краски, общие                          | 1 фн.           | 1 см-1 зм        |
+| Краски, необычные                      | 1 фн.           | 2 зм-10 зм       |
+| Краски, редкие                         | 1 фн.           | 11 зм-25 зм      |
+| Краски, экзотические                   | 1 фн.           | 26 зм-50+ зм     |
+| Духи, общие                            | 1 oz            | 1 см-1 зм        |
+| Духи, необычные                        | 1 oz.           | 2 зм-10 зм       |
+| Духи, редкие                           | 1 oz.           | 11 зм-25 зм      |
+| Духи, экзотические                     | 1 oz.           | 26 зм-50+ зм     |
+| Ковры и гобелены, общие                | 5-15 фн         | 1 зм-5 зм        |
+| Ковры и гобелены, необычные            | 5-15 фн.        | 6 зм-10 зм       |
+| Ковры и гобелены, редкие               | 5-15 фн.        | 11 зм-50 зм      |
+| Ковры и гобелены, экзотические         | 5-15 фн.        | 51 зм-200+ зм    |
