--- a/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
+++ b/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
@@ -1,12 +1,12 @@
 ---
-title: [Core d20 RPG] Правила по торговле
-description: Правила по торговле для D&D 5e
+title: "[Core d20 RPG] Правила по торговле"
+description: "Правила по торговле для D&D 5e"
 date: 2023-09-04
 tags:
-  - Core d20 RPG
-  - Торговля
-  - Правила
-  - Черновик
+  - "Core d20 RPG"
+  - "Торговля"
+  - "Правила"
+  - "Черновик"
 ---
 
 Версия: 0.35
