--- a/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
+++ b/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
@@ -13,13 +13,13 @@ tags:
 
 ## ТЕРМИНОЛОГИЯ
 
-Номинальная стоимость товара – объективная оценочная стоимость товара без учета региональных особенностей (эквивалентна ценам из Руководства Игрока).
+**Номинальная стоимость товара** – объективная оценочная стоимость товара без учета региональных особенностей (эквивалентна ценам из Руководства Игрока).
 
-Эффективная стоимость покупки товара – стоимость, которая была уплачена при покупке товара. Если она больше номинальной – то сделка не выгодна покупателю, если меньше – выгодна.
+**Эффективная стоимость покупки товара** – стоимость, которая была уплачена при покупке товара. Если она больше номинальной – то сделка не выгодна покупателю, если меньше – выгодна.
 
-Эффективная стоимость продажи товара – стоимость, за которую был продан товар. Определяется по отношению к номинальной стоимости товара. Если эффективная стоимость продажи меньше номинальной, то торговля идет в убыток, а если наоборот – то сделка приносит прибыль
+**Эффективная стоимость продажи товара** – стоимость, за которую был продан товар. Определяется по отношению к номинальной стоимости товара. Если эффективная стоимость продажи меньше номинальной, то торговля идет в убыток, а если наоборот – то сделка приносит прибыль
 
-Размер поселения - стандартные правила D&D 3.5 ed
+**Размер поселения** - стандартные правила D&D 3.5 ed
 
 ## НОВЫЕ ВТОРИЧНЫЕ НАВЫКИ
 
@@ -30,6 +30,7 @@ tags:
 It including lore about materials, manufacture, a specific craft (such as smithing, brewing, or cooking), and commerce.
 
 ## ОПРЕДЕЛЕНИЕ БАЗОВОЙ ЦЕНЫ СДЕЛКИ
+
 Персонаж делает проверку Знаний (торговли) против базового КС поселения для торговли. В зависимости от успешности броска сделка выгодна в ту или иную сторону.
 
 1 Определение базовой цены сделки
@@ -45,7 +46,7 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 
 ## ОПРЕДЕЛЕНИЕ БАЗОВОЙ ЦЕНЫ ТОВАРА
 
-Базовая цена покупки/продажи товара – это стоимость, по которой его готовы покупать при прочих равных показателях (равновесная цена). 
+**Базовая цена покупки/продажи товар**а – это стоимость, по которой его готовы покупать при прочих равных показателях (равновесная цена). 
 
 Также на базовую цену товара влияет его специфика -  так яйца динозавров стоят дешево в Порте Ньянзару, но поскольку торговцы в нем понимают что покупатель берет его для продажи в регионе, где их нет, то и цену продажи они будут определять исходя из того что на целевом рынке продажи цена товара высока.
 
@@ -53,7 +54,7 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 
 ## ОПРЕДЕЛЕНИЕ ИТОГОВОЙ ЦЕНЫ ТОВАРА
 
-На итоговую цену товара влияют:
+На **итоговую цену товара** влияют:
 - спрос на товар в поселении (ранжируется от 1 до 5) (в данном случае мы называем спросом как желание купить так и желание продать) – высокий спрос увеличивает итоговую цену и наоборот.
 - наличие предложения продавцов в поселении (ранжируется от 1 до 5) – высокое предложение снижает итоговую цену и наоборот.
 
@@ -67,7 +68,7 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 | Высокая        | -40%              | -25%         | -10%          | 100%          | 10%                  |
 | Крайне высокая | -75%              | -40%         | -25%          | -10%          | 100%                 |
 
-Количество проданного товара зависит от Емкости рынка, которая является функцией от Спроса на товар и Размера поселения.
+Количество проданного товара зависит от **Емкости рынка**, которая является функцией от **Спроса на товар** и **Размера поселения**.
 
 Лимит затрат поселения (вставить из старых правил).
 
@@ -82,9 +83,9 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 | Высокий        | х        | х       | х               | 40 000    | х            |
 | Крайне высокий | х        | х       | х               | х        | 100 000        |
 
-Максимальный размер партии товара, которая может быть продана в поселении определяется в конечной цене (т.е. реальное продаваемое количество товара будет меньше если продавец продает с выгодой для себя и больше если продает с убытком).
+**Максимальный размер партии товара**, которая может быть продана в поселении определяется в конечной цене (т.е. реальное продаваемое количество товара будет меньше если продавец продает с выгодой для себя и больше если продает с убытком).
 
-Базовая длительность операции - 5 дней. Если результат не устраивает персонажа, то он может потратить еще 5 дней, чтобы найти других клиентов (покупателей или продавцов) и повторить проверку Знаний (торговля).
+**Базовая длительность операции** - 5 дней. Если результат не устраивает персонажа, то он может потратить еще 5 дней, чтобы найти других клиентов (покупателей или продавцов) и повторить проверку Знаний (торговля).
 
 ---
 
