--- a/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
+++ b/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
@@ -21,6 +21,17 @@ tags:
 
 **Размер поселения** - стандартные правила D&D 3.5 ed
 
+## Процедура торговли
+
+1. Определить стоимость товара в регионе, где покупается товар с учетом спроса и предложения.
+2. Определить базовую цену сделки покупки товара - торговец совершает проверку Знания (торговля в регионе) (Интеллект) против КС для указанного товара в этом регионе.
+3. Определяется эффективная стоимость покупки товара.
+4. Определяется стоимость товара в регионе продажи товара.
+5. Определеяется базовая цена сделки продажи товара аналогично п.2
+6. Определяется эффективная стоимость продажи товара.
+7. Прибыль = Эффективная стоимость продажи - Эффективная стоимость покупки - Расходы на транспортировку
+
+
 ## НОВЫЕ ВТОРИЧНЫЕ НАВЫКИ
 
 ### Знания (торговля в %%регионе%%)
@@ -62,11 +73,11 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 
 | Предложение    | Спрос отсутствует | Спрос низкий | Спрос базовый | Спрос Высокий | Спрос крайне высокий |
 |----------------|-------------------|--------------|---------------|---------------|----------------------|
-| Отсутствует    | 100%              | 10%          | 50%           | 100%          | 200%                 |
-| Низкая         | -10%              | 100%         | 10%           | 50%           | 100%                 |
-| Базовая        | -25%              | -10%         | 100%          | 10%           | 50%                  |
-| Высокая        | -40%              | -25%         | -10%          | 100%          | 10%                  |
-| Крайне высокая | -75%              | -40%         | -25%          | -10%          | 100%                 |
+| Отсутствует    | 100%              | 110%         | 125%          | 150%          | 200%                 |
+| Низкая         | 90%               | 100%         | 110%          | 125%          | 150%                 |
+| Базовая        | 80%               | -10%         | 100%          | 110%          | 125%                 |
+| Высокая        | 75%               | 80%          | -10%          | 100%          | 110%                 |
+| Крайне высокая | 50%               | 75%          | 80%           | -10%          | 100%                 |
 
 Количество проданного товара зависит от **Емкости рынка**, которая является функцией от **Спроса на товар** и **Размера поселения**.
 
