--- a/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
+++ b/src/content/posts/core-d20/cored20-trading-rules-waterdeep.mdx
@@ -218,3 +218,7 @@ It including lore about materials, manufacture, a specific craft (such as smithi
 | Ковры и гобелены, необычные            | 5-15 фн.        | 6 зм-10 зм       |
 | Ковры и гобелены, редкие               | 5-15 фн.        | 11 зм-50 зм      |
 | Ковры и гобелены, экзотические         | 5-15 фн.        | 51 зм-200+ зм    |
+
+---
+
+Onedrive: [E5E - EQUIPMENT -TRADE GOODS REV01 24052022.docx](https://1drv.ms/w/s!Atcrhwwo1lBA19gE4k7ce4gSz8dcUQ?e=7z9ArD)
