--- a/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
+++ b/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
@@ -2,6 +2,12 @@
 title: "Злой ГМ - Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными"
 date: "2022-07-05"
 description: "Перевод статьи Злого ГМ-а про создание столкновений"
+tags:
+  - Angry GM
+  - перевод
+  - столкновения
+  - Советы Мастеру
+author: Angry GM
 ---
 
 [https://theangrygm.com/four-things-youve-never-heard-of-that-make-encounters-not-suck/](https://vk.com/away.php?to=https%3A%2F%2Ftheangrygm.com%2Ffour-things-youve-never-heard-of-that-make-encounters-not-suck%2F&cc_key=)
