--- a/src/content/posts/translations/angrygm-taro-for-dummies.mdx
+++ b/src/content/posts/translations/angrygm-taro-for-dummies.mdx
@@ -3,9 +3,10 @@ title: "Злой ГМ - Таро для мастеров- чайников"
 date: "2022-09-05"
 description: "Перевод статьи Злого ГМ-а про таро"
 tags: 
-  - AngryGM
+  - Angry GM
   - перевод
   - Советы Мастеру
+author: Angry GM
 ---
 
 Текст Злого ГМ-а от 8 июня 2022 г.
