--- a/src/content/posts/articles/herbalism-dnd-5e.mdx
+++ b/src/content/posts/articles/herbalism-dnd-5e.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Травничество (правила для D&D 5ed)"
 date: "2022-09-05"
-desctiption: "Альтернативные правила по травничеству"
+description: "Альтернативные правила по травничеству"
 tags:
 - кросспост
 - травничество
