--- a/src/content/posts/translations/angrygm-presentation-of-your-pc.mdx
+++ b/src/content/posts/translations/angrygm-presentation-of-your-pc.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Представление вашего персонажа"
+title: "Злой ГМ - Представление вашего персонажа"
 date: "2023-09-05"
+description: "Перевод статьи Злого ГМ-а о представлении игроком своего персонажа другим игрокам и мастеру"
 tags:
   - "Angry GM"
   - "перевод"
