--- a/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
+++ b/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Злой ГМ - Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными"
-date: "2022-07-05"
+date: "2023-09-05"
 description: "Перевод статьи Злого ГМ-а про создание столкновений"
 tags:
   - Angry GM
@@ -14,7 +14,7 @@ author: Angry GM
 
 Добро пожаловать в третью часть моей серии со все более неточным названием: _«Получите максимальную отдачу от вашей системы навыков»._ В первых двух частях я рассказал вам все, что мог придумать, относительно того, как реагировать на каждое действие, которое ваши игроки могут вам подкинуть. Возможно, вы думаете, что у вас есть всё необходимое для ролевой игры. НРИ - это просто набор действий в логической последовательности. Что ж, вы не сумасшедшие, если так думаете, но ДМ'ы носят две шляпы. Стильная шляпа для вождения игры и кепка практичного бухгалтера для планирования игры.
 
-«Пять простых правил[…](https://vk.com/@trpgkingdom-5-prostyh-pravil-dlya-igr-s-sistemoi-navykov)» и «Выносите решения как[…](https://vk.com/@trpgkingdom-vynosite-resheniya-kak-master)» - это все о лихой фетровой шляпе для ведущего. Но создание энкаунтера - это не то, что вы делаете в шляпе. Вам нужно надеть кепку. Для этого нам понадобится совсем другая статья. Может две. Но кто бы мог их написать?
+[Пять простых правил](https://vk.com/@trpgkingdom-5-prostyh-pravil-dlya-igr-s-sistemoi-navykov) и [Выносите решения как](https://vk.com/@trpgkingdom-vynosite-resheniya-kak-master) - это все о лихой фетровой шляпе для ведущего. Но создание энкаунтера - это не то, что вы делаете в шляпе. Вам нужно надеть кепку. Для этого нам понадобится совсем другая статья. Может две. Но кто бы мог их написать?
 
 Хорошо, я сделаю это.
 
@@ -316,4 +316,4 @@ _«Но что, если вы закончите энкаунтер слишко
 
 _Переходите к следующей части, и я расскажу вам, как создавать потрясающие энкаунтеры._
 
-_Источник: <[https://vk.com/@trpgkingdom-chetyre-veschi-o-kotoryh-vy-ne-slyshali-kotorye-delaut-enkau](https://vk.com/@trpgkingdom-chetyre-veschi-o-kotoryh-vy-ne-slyshali-kotorye-delaut-enkau)\>_
+Источник: [https://vk.com/@trpgkingdom-chetyre-veschi-o-kotoryh-vy-ne-slyshali-kotorye-delaut-enkau](https://vk.com/@trpgkingdom-chetyre-veschi-o-kotoryh-vy-ne-slyshali-kotorye-delaut-enkau)
