--- a/src/content/posts/translations/angrygm-taro-for-dummies.mdx
+++ b/src/content/posts/translations/angrygm-taro-for-dummies.mdx
@@ -87,7 +87,7 @@ author: Angry GM
 
 Это та, который выглядит так:
 
-![](https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-Waite.webp)
+https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-Waite.webp
 
 Имеет ли значение это s$&%? Это на тесте? Нет. Но это объясняет, почему карты Таро имеют мешанину символов. Все, от алхимии и астрологии и герметизма до иудео-христианского символизма.
 
@@ -117,9 +117,9 @@ author: Angry GM
 
 В традиционной колоде Таро 78 карт. И он разделен на две разные маленькие подпалубы. 22 карты составляют Старшие Арканы. А 56 карт составляют Младшие Арканы.
 
-![](https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-Fool.webp)
+https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-Fool.webp
 
-![](https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-5-Cups.webp)
+https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-5-Cups.webp
 
 Слева находится первая карта Старших Арканов. Или последний. Технически это ноль. Но разные колоды Таро раскладывают s$%& немного по-разному. Не имеет значения. Потому что Таро о циклах. Итак, первый — последний — снова первый.
 
@@ -169,13 +169,13 @@ author: Angry GM
 
 Вот как выглядят Дурак и Пятерка Кубков моей колоды рядом с версиями Райдера-Уэйта.
 
-![](images/image-4.png)
+images/image-4.png
 
 Обратите внимание на сходство. Схожие символы, хотя есть явные различия. Однако я получаю некоторый дополнительный смысл, потому что я знаю, что Дурак — это Дионис в первобытном юноше, а Пятерка Кубков показывает момент, когда Психея предает свое обещание, данное Эросу, не смотреть ему в лицо, и тем самым уводит его в ночь.
 
 Дело в том, что даже глупые новые колоды могут работать, если они хорошо разработаны. Я имею в виду, посмотрите на это г$&%о.
 
-![](images/image-3.png)
+images/image-3.png
 
 Колода Hello Kitty не только представлена, но и очень хорошо разработана. Карты сохраняют те же интуитивные, эмоциональные темы. Довольно чертовски круто? Хм?
 
@@ -229,7 +229,7 @@ author: Angry GM
 
 Посмотрите ещё раз на Дурака. Какой бы вы ни хотели. Посмотрите на все три. Просто изучите карты некоторое время. А затем опишите карту. Что там происходит? В чем дело?
 
-![](images/image-5.png)
+images/image-5.png
 
 У Всадника-дурака на плече повязка. Мифический дурак выходит из пещеры. Китти отправляется в полет на воздушном шаре. Заметили, что они все собираются? Отправление? Отправляетесь в путешествие?
 
@@ -243,7 +243,7 @@ author: Angry GM
 
 А теперь посмотрите еще раз на эти Пятерки Кубков.
 
-![](images/image-6.png)
+images/image-6.png
 
 Здесь гораздо больше вариаций. Но тематически тоже много общего. Райдер оплакивает кучу пролитых чашек. Один. Под темным небом. Психею оставили в покое. Во тьме. Ангельской фигурой. Там есть кровать. И пролитые чашки. Керопиппи — да, я знаю своих персонажей Санрио; не судите — Керопиппи плачет, потому что его пикник испорчен. Тучи, дождь, муравьи, пчелы. И он пролил свои чашки.
 
@@ -265,7 +265,7 @@ author: Angry GM
 
 Итак, я знаю, что Кубки связаны с эмоциями и отношениями. И я знаю, что шестерки обычно означают усилия, работу и настойчивость. Итак, скажем так…
 
-![](https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-6-Cups.webp)
+https://cyborgsandmages.com/wp-content/uploads/2022/06/Rider-6-Cups.webp
 
 … появляется в месте разворота, которое предполагает, что это какая-то Первопричина чего-то. И предположим, что кверент сообщил, что у него проблемы с новой работой. Они просто не чувствуют себя оседлыми. Что вы можете сделать из этого?
 
