--- a/src/content/posts/translations/alexandrian-ask10.mdx
+++ b/src/content/posts/translations/alexandrian-ask10.mdx
@@ -8,7 +8,7 @@ tags:
   - Советы Мастеру
 author: Justin Alexander
 translator: Stanislav Ivanov
-cover: ask-alexandrian.jpg
+cover: ~assets/covers/ask-alexandrian.jpg
 ---
 Текст  от 29 декабря 2022 года
 
