--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -80,6 +80,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 **silver** [Flaming Fist](https://www.dmsguild.com/product/289077/Flaming-Fist?affiliate_id=759617)
 
+**silver** [Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets](https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617)
+
 **silver** [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
 
 **copper** [Palant's guide to Exploring Sword Coast](https://www.dmsguild.com/product/314810/Palants-guide-to-Exploring-Sword-Coast?affiliate_id=759617)
@@ -97,8 +99,6 @@ Core d20 RPG - это проект по написанию набора прав
 [Salvation bases and missions in tables](https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617)
 
 [City Watch of Baldur’s Gate](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
-
-[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets](https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617)
 
 [Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate](https://www.dmsguild.com/product/276163/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate?affiliate_id=759617)
 
@@ -126,7 +126,6 @@ Core d20 RPG - это проект по написанию набора прав
 ### [Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
 
 [D20 Military trinket](https://www.dmsguild.com/product/261535/D20-Military-trinket?affiliate_id=759617)
-
 
 
 ## Материалы размещенные на drivethrurpg.com
