--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -2,11 +2,9 @@
 title: Проект
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
 links:
-  - label: 'TTG club'
-    href: https://ttg.club/
+  - label: 'Создатель чудовищ'
+    href: https://monstermaker.cyborgsandmages.com/
 ---
-
-![](~assets/branding/banner.jpg)
 
 Мы небольшое и дружное сообщество, которое водит и играет игры по Dungeon & Dragons 5e и другим системам.
 
