--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -3,6 +3,8 @@ title: Проекты Киборгов и Чародеев
 description: Проекты и материалы, созданные Киборгами и Чародеями
 ---
 
+[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+
 ## Подборки ресурсов
 
 ### **RPG RESOURCES COMPENDIUM**
