--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -2,9 +2,13 @@
 title: Проект
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
 links:
-  - label: 'Создатель чудовищ'
+  - label: 'TTG club'
     href: https://monstermaker.cyborgsandmages.com/
 ---
+
+![](~assets/branding/banner.jpg)
+
+[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
 Мы небольшое и дружное сообщество, которое водит и играет игры по Dungeon & Dragons 5e и другим системам.
 
