--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -3,7 +3,10 @@ title: Проекты Киборгов и Чародеев
 description: Проекты и материалы, созданные Киборгами и Чародеями
 ---
 
+## Онлайн-инструменты
+
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+
 
 ## Подборки ресурсов
 
