--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -2,13 +2,15 @@
 title: Проект
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
 links:
-  - label: 'TTG club'
+  - label: 'Создатель чудовищ'
     href: https://monstermaker.cyborgsandmages.com/
 ---
 
 ![](~assets/branding/banner.jpg)
 
-[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+Также обратите внимание на [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+
+## Про нас
 
 Мы небольшое и дружное сообщество, которое водит и играет игры по Dungeon & Dragons 5e и другим системам.
 
