--- a/src/content/posts/articles/cityscape-features-of-cities.mdx
+++ b/src/content/posts/articles/cityscape-features-of-cities.mdx
@@ -82,13 +82,15 @@ tags:
 
 **Насыпанный Земляной Вал**: Прочность 6, 60 hp, DC пролома 28. Такие сооружения представляют собой насыпь из земли, утоптанной и обработанной. Земляные валы строятся очень быстро, но их несложно разрушить и через них легко перелезть. (Рассматривайте земляной вал как грубую поверхность при проверках Лазания.) Ковсему прочему, сильный дождь способен существенно ослабить или даже смыть такие баррикады. Земляные валы бывают только высотой 1,5-3 метра — более высокие насыпи рискуют обвалиться.
 
-## ОПАСНОСТИ ПЛОХОЙ САНИТАРИИ
+<Aside v="crimson">
+### ОПАСНОСТИ ПЛОХОЙ САНИТАРИИ
 
 Плохая санитария это не только мусор и отходы, но и бесчисленные болезни.
 
 Любой не привыкший к зловонию должен сделать спасбросок на Стойкость при первом входе в зону с плохой санитарией. При успешной проверке персонаж испытывает чувство тошноты на протяжении 2d4 минут. Провал же означает, что персонажа тошнит 2d4 минуты, и он испытывает приступы тошноты на протяжении следующих 24 часов. Новый спасбросок необходимо проводить через каждые 24 часа, но DC уменьшается на 1 за каждый день после первого. Уменьшение DC спасброска ниже обычного бонуса Стойкости персонажа, означает, что персонаж больше не восприимчив к зловонию.
 
 В таких областях всегда присутствует риск заразиться болезнями. Каждый в подобной области, получающий в 1 раунд очков повреждений больше чем его текущий показатель Телосложения (не модификатор) должен успешно выполнить проверку на Стойкость с DC 12 или будет заражен грязевой лихорадкой (DMG 292).
+</Aside>
 
 **Каменная Стена**: Прочность 8, 180 hp, DC пролома 45. Сделанные из гранитных глыб или похожего камня, такие стены очень сложно строить, но они намного более эффективны, нежели стены сделанные из дерева или грязи. Эти стены толщиной примерно в 30 сантиметров и высотой около 2-4,5 метров.
 
