--- a/src/content/singles/books.mdx
+++ b/src/content/singles/books.mdx
@@ -16,3 +16,16 @@ tags:
   - Руководство Мастера
 ---
 
+Книги старых редакций
+
+## OD&D
+
+## AD&D 1ed
+
+## AD&D 2ed
+
+## D&D 3.0ed & 3.5ed
+
+## D&D 4ed
+
+## Pathfinder 1s
