--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -7,6 +7,17 @@ description: Проекты и материалы, созданные Кибор
 
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
+## Наши архивные ресурсы
+
+[Архив статей с сайта Киборгов и Чародеев на базе Wordpress](https://archivecyborgsandmages.wordpress.com/) - служит лишь для хранения архива статей и переводов
+
+[Старый блог Киборгов и Чародеев на Wordpress](https://cyborgsandmages.wordpress.com/) - не поддерживается
+
+[Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) - не поддерживается
+
+## Загрузки
+
+[Полезные загрузки](https://cyborgsandmages/downloads)
 
 ## Подборки ресурсов
 
@@ -207,13 +218,3 @@ Core d20 RPG - это проект по написанию набора прав
 ~~СМЕРТЕЛЬНЫЕ ПРЕДЕЛЫ~~
 
 ~~РУКОВОДСТВО ПО ВЫЖИВАНИЮ И ИССЛЕДОВАНИЮ~~
-
-## Прочие наши ресурсы
-
-[Архив статей с сайта Киборгов и Чародеев на базе Wordpress](https://archivecyborgsandmages.wordpress.com/) - служит лишь для хранения архива статей и переводов
-
-[Старый блог Киборгов и Чародеев на Wordpress](https://cyborgsandmages.wordpress.com/) - не поддерживается
-
-[Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) - не поддерживается
-
-s
