--- a/src/content/posts/articles/news-2023-09-12.mdx
+++ b/src/content/posts/articles/news-2023-09-12.mdx
@@ -15,17 +15,17 @@ tags:
 
 На этот сайт мы их сохранили пока что в том виде, в котором они были скачаны, но со структурой хранения придется подумать.
 
-Скорее всего появится раздел [Загрузок](~/downloads) равно как и раздел для книг старых редакций [Книги](~/books)
+Скорее всего появится раздел [Загрузок](https://cyborgsandmages.com/downloads) равно как и раздел для книг старых редакций [Книги](https://cyborgsandmages.com/books)
 
 ## Телеграм
 
-Полезные файлы, которые не целесообразно размещать на сайте мы выкладываем в Телеграм канале https://t.me/cyborgs_and_mages
+Полезные файлы, которые не целесообразно размещать на сайте мы выкладываем в [Телеграм канале](https://t.me/cyborgs_and_mages) 
 
 Так что смело рекомендуем подписаться.
 
 ## Обсуждение и помощь по D&D 5e
 
-Непосредственную помощь связанную с любыми вопросами по D&D мы оказываем у себя в дискорде. Присоединяйтесь https://discord.gg/yrJqvCqU3w
+Непосредственную помощь связанную с любыми вопросами по D&D мы оказываем у себя в дискорде. [Присоединяйтесь](https://discord.gg/yrJqvCqU3w) 
 
 
 ## Core d20 RPG
