--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -34,7 +34,7 @@ description: Проекты и материалы, созданные Кибор
 
 Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
 
-Подробнее - смотри в разделе [Core d20 RPG](https://cyborgsandmages.com/core-d20/1)
+Подробнее - смотри в разделе [Статьи по Core d20 RPG](https://cyborgsandmages.com/core-d20/1), а также [Страница проекта Core d20 RPG](https://cyborgsandmages.com/cored20rpg)
 
 ### Зачем мы это делаем?
 
@@ -49,6 +49,33 @@ Core d20 RPG - это проект по написанию набора прав
 Наши дополнительные правила базируются на анализе материалов с реддита, Гильдии мастеров и сторонних издателей — таких как Kobold Press, Paradigm Conceptcs и прочих.
 
 Надо ли это вам? Конечно, надо.
+
+## Перевод SRD 5.1 на русский язык
+
+[SRD 5.1 на русском](https://palikhov.github.io/srd-dnd-5e-ru/) 
+
+[Публикации про SRD 5.1 па русском](https://cyborgsandmages.com/srd/1)
+
+[Страница проекта](https://cyborgsandmages.com/srd-translate)
+
+### Зачем мы взялись переводить SRD 5.1 на русский?
+
+У нас две цели:
+
+1. Наличие полностью легального и доступного для распространения варианта правил D&D 5e.
+2. Несогласие с переводом игромеханических сущностей у существующих вариантов переводов - Phantom Studio, anon, и официальной локализации Hobby World
+
+### Зачем вы переводите SRD если есть пиратские переводы и перевод от Hobby World?
+
+Затем, что ни один из указанных продуктов нельзя использовать для бесплатного распространения. Вы не можете использовать их для создания собственных материалов и использовать коммерческим способом.
+
+Плюс – в каждом из указанных переводов есть вещи которые нам не нравятся. В частности Perception как Внимание (у нас Восприятие), spellcasting focus как фокусировка (у нас фокус).
+
+К тому же , мы стараемся сделать акцент не на художественности текста, а на правильной игромеханической формулировке – как показал опыт использования переводов Фантомов – в них множество ошибок, которые усложняют трактовки.
+
+К тому же, в качестве основного инструмента перевода мы используем Smartcat.ai — который накапливает память переводов и успешно использует глоссарии, поэтому наша работа по переводу SRD важна для нас и в контексте будущих переводов.
+
+Поэтому мы будем стараться эти формулировки исправлять и обновлять по мере получения обратной связи.
 
 ## Старые материалы по Лиге Авантюристов
 
@@ -213,8 +240,27 @@ Core d20 RPG - это проект по написанию набора прав
 
 [Eberron](https://www.worldanvil.com/w/eberron-palant)
 
-## НЕОПУБЛИКОВАННОЕ
+## Прочие переводы
 
-~~СМЕРТЕЛЬНЫЕ ПРЕДЕЛЫ~~
+### Downtime & Demesnes 5e
 
-~~РУКОВОДСТВО ПО ВЫЖИВАНИЮ И ИССЛЕДОВАНИЮ~~
+Редактор: Редрик
+
+### Sly Flourish Lazy DM Reference Document
+
+## Прочее
+
+### Конверсия предметов из BG1/2 в пятую редакцию
+
+### Кормир
+
+### Создатель чудовищ
+
+[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+
+[Страница на Github](https://github.com/palikhov/monstermaker)
+
+[Разработка](https://github.com/JunkTurkey/giffyflyph-webapp-5e-monster-maker)
+
+В проекте принимали участие: Palant, JunkTurkey, Phenomen
+
