--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -68,8 +68,6 @@ links:
 
 Опыт работы над переводом на русский язык был использован и при помощи в переводе SRD 5.1 на украинский язык.
 
-
-
 ## Создание домашних правил и homebrew
 
 Закономерным итогом многолетнего вождения D&D 5e и хаков на основе ее движка стало написание собственных вариантных правил и дополнений, которые в целом также хорошо были восприняты англоязычным сообществом - [Palant Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617), [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617) в частности.
@@ -81,5 +79,12 @@ links:
 <Aside>
 
 Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/) и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект [Core d20 RPG](https://cyborgsandmages.com/cored20rpg)
+
+</Aside>
+
+
+<Aside>
+
+Также у нас есть телеграмм канал, группа телеграмм и простенький телеграмм бот для выдачи базовой информации
 
 </Aside>
