--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -204,13 +204,34 @@ tags:
 8
 
 ## Цикл Искусство рулингов
-1
+
+1 [Искусство рулингов. Часть I](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-i) 
 
 2
 
 3
 
 4
+
+5
+
+6
+
+7
+
+8
+
+9
+
+10
+
+11 [Искусство рулингов. Часть XI: Разрешение ситуации повествованием или действием](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xi-razreshenie-situaczii-povestvovaniem-ili-dejstviem)
+
+12 [Искусство рулингов. Часть XII: Скрытые или открытые значения сложности](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xii-skrytye-ili-otkrytye-znacheniya-slozhnosti)
+
+13 [Искусство рулингов. Часть XIII: Скрытые или открытые ставки](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki)
+
+14 [Искусство рулингов. Часть XIV: Групповые действия](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiv-gruppovye-dejstviya)
 
 ## Цикл Ремикс Авернуса
 1
@@ -225,6 +246,8 @@ tags:
 
 Спроси Александриана № 6
 
+[Спроси Александриана № 10 - Как попрощаться с игроком](https://cyborgsandmages.com/posts/translations/alexandrian-ask10)
+
 ## Прочие статьи
 
 Как готовить модуль
@@ -234,6 +257,16 @@ tags:
 Последствие подтасовок: Не все броски дайсов являются механикой
 
 Диапазон подготовки
+
+## Грамотная подготовка
+
+[Первая статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-1)
+
+[Вторая статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-2)
+
+[Третья статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-3)
+
+[Четвертая статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-4)
 
 ---
 
