--- a/src/content/posts/articles/geography-of-forgotten-realms.mdx
+++ b/src/content/posts/articles/geography-of-forgotten-realms.mdx
@@ -10,7 +10,6 @@ tags:
 Author: "Николай Пегасов"
 ---
 
-
 Это архивная статья из старого Мира Фантастики
 
 Автор: Николай Пегасов
@@ -21,7 +20,7 @@ Author: "Николай Пегасов"
 
 Забытые королевства
 
-![](images/081122_0151_1.png)
+images/081122_0151_1.png
 
 Наиболее известный и проработанный сеттинг (игровой мир) для настольной ролевой игры Dungeons & Dragons. В России известен, прежде всего, по компьютерным играм (Icewind Dale, Baldur's Gate, Neverwinter Nights) и книжному сериалу Роберта Сальваторе о Темном эльфе.
 
@@ -39,7 +38,7 @@ Author: "Николай Пегасов"
 
 Научно-официальное название мира Забытых королевств — Абейр-Ториль (Abeir-Toril), что значит «колыбель жизни» на одном из мертвых языков. Название обычно сокращают до «Ториль». Именно так обозначалась бы придуманная Эдом Гринвудом планета в астрономическом каталоге несуществующих миров. Светило в звездной системе, где расположен Ториль, по классу соответствует нашему Солнцу. Ториль — третья планета от солнца, вокруг нее вращается единственный спутник — Селюн, напоминающий привычную Луну. Другой популярный топоним, который используют для обозначения мира Forgotten Realms, — «Фэйрун». Это название самого населенного и развитого континента планеты Ториль.
 
-![](images/081122_0151_2.png)
+images/081122_0151_2.png
 
 Взглянем на глобальную карту мира (существует и изображение глобуса, но оно менее наглядно). В центре расположен гигантский материк, отдаленно напоминающий Евразию с примкнувшей Африкой. Его подразделяют на три континента.
 
@@ -71,7 +70,7 @@ Author: "Николай Пегасов"
 
 5\. Официальный сайт www.wizards.com/forgottenrealms. Новая информация о мире появляется еженедельно.
 
-![](images/081122_0151_3.png)
+images/081122_0151_3.png
 
 Ежегодно публикуется несколько новых ролевых пособий и художественных книг по Forgotten Realms. А в сентябре этого года должна выйти компьютерная игра Neverwinter Nights 2.
 
@@ -107,7 +106,7 @@ Author: "Николай Пегасов"
 
 КОРМИР
 
-![](images/081122_0151_4.jpg)
+images/081122_0151_4.jpg
 
 Кормир (Cormyr) — вероятно, единственное настоящее королевство на Ториле: с абсолютной монархией, династией, дворянскими титулами, богатейшей столицей (город Сузайл), мощной армией и политическими амбициями. К несчастью, новейшая история Кормира — самая грустная страница его летописи. После трагической гибели Его Королевского Величества Азуна IV, который, как и положено эпическому монарху, был съеден в поединке с драконом, в государстве настала смута. Феодалы на окраинах не желают подчиняться регентше, простой народ голодает, а гоблины терроризируют границу. Главная достопримечательность королевства — портовый город Марсембер, стоящий на сотне каналов и одновременно напоминающий Венецию и Амстердам. Кормиру посвящены события книги «Шпора Дракона».
 
@@ -123,7 +122,7 @@ Author: "Николай Пегасов"
 
 Самая западная часть Сердцеземья, длинная береговая линия Западного океана покрыта независимыми портовыми городами. Именно на Побережье Мечей (Sword Coast) разместились три самых знаменитых мегаполиса Забытых королевств. Все города Побережья отличаются космополитичными взглядами, любовью к наживе, но при этом — строгими законами, за соблюдением которых следит неподкупная стража.
 
-![](images/081122_0151_5.png)
+images/081122_0151_5.png
 
 Врата Бальдура. Главный вход.
 
@@ -135,7 +134,7 @@ Author: "Николай Пегасов"
 
 Невервинтер (Neverwinter) — третий из великих мегаполисов Побережья Мечей. Он заведует торговлей с далеким Севером и связан денежными узами с расположенным южнее Глубоководьем. Название города примерно переводится как «зиме не бывать» и происходит от одноименной реки, вода в которой теплая даже в лютый мороз. Эта природная особенность позволяет жителям выращивать овощи, фрукты и цветы круглый год. В Невервинтере и прилегающих областях развивается действие компьютерных игр серии Neverwinter Nights.
 
-![](images/081122_0151_6.jpg)
+images/081122_0151_6.jpg
 
 Невервинтер. Город известен своими садами, мостами и фонтанами.
 
@@ -207,7 +206,7 @@ Author: "Николай Пегасов"
 
 1\. В качестве базового материала о мире Forgotten Realms настоятельно рекомендуем прочесть статью Николая Пегасова «Большие герои маленьких царств», которая была опубликована в журнале «Игромания» и сейчас размещена на диске «Мира фантастики» в разделе «Рубрики журнала».
 
-![](images/081122_0151_7.png)
+!images/081122_0151_7.png
 
 2\. «Забытые королевства в художественной литературе» — 2004, №6(11).
 
