--- a/src/content/singles/downloads.mdx
+++ b/src/content/singles/downloads.mdx
@@ -6,8 +6,16 @@ date: 2023-09-12
 
 ## СТАРЫЕ РЕДАКЦИИ
 
+## ПРИКЛЮЧЕНИЯ
+
+[Драконий Куш - Ремикс Александриана](https://cyborgsandmages.com/files/downloads/remix_drakonyego_kusha_v_0_97.pdf)
+
+
 ## ПОЛЕЗНЫЕ ФАЙЛЫ
 
+[Базовое руководство для игроков](https://cyborgsandmages.com/files/downloads/basic-player-manual.pdf) 
+
+[Правила отряда - заметка](https://cyborgsandmages.com/files/downloads/lance-troop-rules-draft-1.pdf) 
 ## РУКОВОДСТВА
 
 ## ШАБЛОНЫ
