--- a/src/content/posts/translations/alexandrian-preparing-1.mdx
+++ b/src/content/posts/translations/alexandrian-preparing-1.mdx
@@ -3,9 +3,8 @@ title: "Грамотная подготовка. Часть I"
 date: "2023-09-13"
 description: "Первая статья Александриана из цикла про подготовку Мастера к игре"
 tags: 
-  - "alexandrian"
+  - "Alexandrian"
   - "перевод"
-  - "Александриан"
   - "Советы Мастеру"
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
