--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -17,7 +17,7 @@ description: Проекты и материалы, созданные Кибор
 
 ## Загрузки
 
-[Полезные загрузки](https://cyborgsandmages/downloads)
+[Полезные загрузки](https://cyborgsandmages.com/downloads)
 
 ## Подборки ресурсов
 
