--- a/src/content/posts/articles/about-downtime-rules.mdx
+++ b/src/content/posts/articles/about-downtime-rules.mdx
@@ -120,8 +120,13 @@ tags:
 
 Объем и КС, а также то, какая характерстика используется для проверки инструмента, для любого данного предмета определяется Мастером, поскольку перечисление этого для каждого возможного предмета потребовало бы огромного количества таблиц. Вот несколько примеров в качестве предложения:
 
-<table style="border-collapse:collapse" border="0"><colgroup><col style="width:161px"><col style="width:161px"><col style="width:161px"><col style="width:161px"></colgroup><tbody valign="top"><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  solid 0.5pt; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt">Пример предмета<p></p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  solid 0.5pt; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Масштаб</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  solid 0.5pt; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Инструмент</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  solid 0.5pt; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>КС</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Антитоксин</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Узкий (3)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Интеллект (набор травника)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>12</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Воинское оружие</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Участие (12)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Сила (Инструменты кузнеца)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>14</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Латный доспех</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Комплекс (18)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Сила (Инструменты кузнеца)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>16</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Алхимический огонь</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Скромный (6)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Интеллект (Принадлежности алхимика)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>18</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  solid 0.5pt; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Базовый яд</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Узкий (3)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>Интеллект (набор отравителя)</p></td><td style="padding-left: 7px; padding-right: 7px; border-top:  none; border-left:  none; border-bottom:  solid 0.5pt; border-right:  solid 0.5pt"><p>12</p></td></tr></tbody></table>
-
+| Редкость    | Масштаб          | КС | Расходы        |
+|-------------|------------------|----|----------------|
+| Общий       | Узкий (3)        | 12 | 25 золотых     |
+| Необычный   | Скромный (6)     | 14 | 100 золотых    |
+| Редкий      | Участие (12)     | 16 | 1000 золотых   |
+| Очень редко | Комплекс (18)    | 18 | 10 000 золотых |
+| Легендарный | Продвинутый (24) | 20 | 50 000 золотых |
 **Совместная работа.** Для изготовления большинства предметов требуется только один персонаж. Тем не менее, для создания предметов с высоким Масштабом может потребоваться как минимум два или три мастера, каждый из которых обладает необходимыми навыками работы с инструментами, для совместной работы над предметом. Дополнительные руки могут помочь в работе, до определенного момента. Если над проектом работает в два раза больше мастеров (по сравнению с минимумом, то есть 2 для большинства предметов, 4, если требуется двое и т. д.), то проверка характеристики с инструментом для определения Прогресса совершается с преимуществом. Дополнительные помощники эффект не оказывают.
 
 ### Расходуемые магические предметы
