--- a/src/content/posts/articles/dmg-dnd-4-part1.mdx
+++ b/src/content/posts/articles/dmg-dnd-4-part1.mdx
@@ -8,7 +8,8 @@ tags:
   - translate
   - перевод
   - Кампании
-  - Советы Мастеру,
+  - Советы Мастеру
+  - Руководство Мастера
   - Игроки
   - Виды игроков
   - Мотивация игроков
